# gnn-node-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gat_cora.yaml  graphsage_cora.yaml
notebooks/: Colab_3.ipynb  Colab_4.ipynb
src/: evaluate.py  train.py
src/models/: __init__.py  gat.py  gnn_stack.py  graphsage.py
src/utils/: __init__.py  optimizer.py
